--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,14 @@
   "name": "palettable-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:3001",
+      "pathRewrite": {
+        "^/api": "/"
+      }
+    }
+  },
   "dependencies": {
     "autoprefixer": "7.1.1",
     "axios": "^0.11.0",
