--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "proxy": {
-    "/api": {
-      "target": "http://localhost:3001",
-      "pathRewrite": {
-        "^/api": "/"
-      }
+    "/api/": {
+      "target": "http://localhost:3001"
     }
   },
   "dependencies": {
